# auto-tst

./: .flake8  .gitignore  LICENSE.md  README.md  about.html  author_and_copyright.html  genindex.html  index.html  installation.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  usage.html
.github/workflows/: python_black.yml  python_flake8.yml  python_mypy.yml  tests.yml
_sources/: installation.md.txt
_sources/source/: autotst.rst.txt
autotst/: __init__.py  autotst_types.py  functions.py  model.py  splitted_sets.py  test.py
doc/: Makefile  about.md  author_and_copyright.md  conf.py  index.rst  readme.txt  usage.md
doc/source/: modules.rst
example/: digits.py  gaussians.py  gaussians_v1.py  gaussians_v2.py  type-I_control.py
source/: autotst.html  modules.html
tests/: test_autotst.py
