[tool.poetry]
name = "autotst"
version = "1.2"
description = "Two-samples Testing and Distribution Shift Detection with AutoML"
authors = [
	"Jonas M. Kübler <jonas.m.kuebler@tuebingen.mpg.de>",
    "Vincent Stimper <vincent.stimper@tuebingen.mpg.de>",
    "Vincent Berenz <vberenz@tuebingen.mpg.de>"
]
packages = [
	 { include = "autotst" }
]
readme = "README.md"
homepage = "https://jmkuebler.github.io/auto-tst/"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
autogluon = "^0.4.2"
pandas = "^1.3"
nptyping = "^1.4.4"
numpy = "^1.21"
pytest = "^7.1.2"
torchvision = "0.11.3"
importlib-metadata = ">=1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy.overrides]
module = [
       "autogluon",
       "pandas",
       "nptyping",
]
ignore_missing_imports = true